--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
         </div> -->
 
     </div>
-    <footer class="w3-container w3-teal w3-footer w3-animate-zoom">
+    <!-- <footer class="w3-container w3-teal w3-footer w3-animate-zoom">
         <p class="w3-small">
             Made with <i class="fa fa-heart fa-stack w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
                 style="text-decoration: none;" target="_blank">RIT</a>
         </p>
-    </footer>
+    </footer> -->
 
 
     <!-- Modal -->
