--- a/pages/about.html
+++ b/pages/about.html
@@ -45,6 +45,9 @@
 <div class="w3-center w3-padding-32">
     <div class="w3-card w3-container w3-justify w3-padded-box">
         <p>
+            Content not availalbe due to blind review requirements. 
+        </p>
+        <!-- <p>
             This research on unit test smells, along with the implementation of the test smell detection tool was
             performed by the faculty and students of the <a href="http://www.se.rit.edu/" target="_blank">Department of
             Software
@@ -60,17 +63,17 @@
             <li><a href="https://github.com/mkaouer" target="_blank">Mohamed Wiem Mkaouer</a></li>
             <li><a href="https://github.com/khalidsalmalki" target="_blank">Khalid Almalki</a></li>
         </ul>
-        </p>
+        </p> -->
     </div>
 </div>
 
 
-<footer class="w3-container w3-teal w3-footer w3-animate-opacity">
+<!-- <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
     <p class="w3-small">
         Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
                                                                                    style="text-decoration: none;"
                                                                                    target="_blank">RIT</a>
     </p>
-</footer>
+</footer> -->
 </body>
 </html>
