--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
             <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
                 <a href='pages/research/home.html' style="text-decoration: none;">
                     <div class="w3-card w3-container">
-                        <h3>Test Smell Research</h3><br>
+                        <h3>Test Smell Research</h3>
+                        <span><i>Research Data, Exloratory & Ongoing Studies, etc.</i></span>
+                        <br>
                         <i class="fa fa-flask w3-margin-bottom w3-text-theme  w3-fa-spin" style="font-size:100px"></i>
                     </div>
                 </a>
