--- a/pages/research/experimentdata.html
+++ b/pages/research/experimentdata.html
@@ -98,6 +98,68 @@
             </p>
             <p>
                 Listed below are details of the tables in the dataset: testsmells_java.sqlite
+
+                <style type="text/css">
+                    .tg  {border-collapse:collapse;border-spacing:0;}
+                    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+                    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+                    .tg .tg-7btt{font-weight:bold;border-color:inherit;text-align:center;vertical-align:top}
+                    .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+                    </style>
+                    <table class="tg">
+                      <tr>
+                        <th class="tg-7btt">Table Name</th>
+                        <th class="tg-7btt">Description</th>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">git_commit_log</td>
+                        <td class="tg-0pky">The git log for each project</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">git_commit_files</td>
+                        <td class="tg-0pky">The files and actions associated with each commit</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">git_tag</td>
+                        <td class="tg-0pky">The tags associated with each project</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">github_metadata</td>
+                        <td class="tg-0pky">Repository details of each project. Obtained from GitHub.</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">github_release</td>
+                        <td class="tg-0pky">Details of all project releases. Obtained from GitHub.</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">github_issue</td>
+                        <td class="tg-0pky">Details of all project issues. Obtained from GitHub.</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">github_issue_label</td>
+                        <td class="tg-0pky">The label associated with each issue</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">github_issue_commit</td>
+                        <td class="tg-0pky">The commits associated with each issue</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">tool_testfile_history</td>
+                        <td class="tg-0pky">Detected Junit test files</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">tool_testfilemapping_history</td>
+                        <td class="tg-0pky">Mapping of test and production files</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">tool_testsmell_history</td>
+                        <td class="tg-0pky">The type of test smells detected on each unit test file</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0pky">debt_comment_history</td>
+                        <td class="tg-0pky">Comments containing SATD in test files</td>
+                      </tr>
+                    </table>
             </p>
         </div>
 
