--- a/pages/research/experimentdata.html
+++ b/pages/research/experimentdata.html
@@ -95,6 +95,92 @@
             </p>
             <p>
                 Listed below are details of the tables in the dataset: testsmells_android.sqlite
+
+                <style type="text/css">
+                    .tg  {border-collapse:collapse;border-spacing:0;}
+                    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+                    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+                    .tg .tg-amwm{font-weight:bold;text-align:center;vertical-align:top}
+                    .tg .tg-0lax{text-align:left;vertical-align:top}
+                    </style>
+                    <table class="tg">
+                      <tr>
+                        <th class="tg-amwm">Table Name</th>
+                        <th class="tg-amwm">Description</th>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">git_commit_log</td>
+                        <td class="tg-0lax">The git log for each project</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">git_commit_files</td>
+                        <td class="tg-0lax">The files and actions associated with each commit</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">git_tag</td>
+                        <td class="tg-0lax">The tags associated with each project</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">github_metadata</td>
+                        <td class="tg-0lax">Repository details of each project. Obtained from GitHub.</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">github_release</td>
+                        <td class="tg-0lax">Details of all project releases. Obtained from GitHub.</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">github_issue</td>
+                        <td class="tg-0lax">Details of all project issues. Obtained from GitHub.</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">github_issue_label</td>
+                        <td class="tg-0lax">The label associated with each issue</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">github_issue_commit</td>
+                        <td class="tg-0lax">The commits associated with each issue</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">tool_testfile_history</td>
+                        <td class="tg-0lax">Detected Junit test files</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">tool_testfilemapping_history</td>
+                        <td class="tg-0lax">Mapping of test and production files</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">tool_testsmell_history</td>
+                        <td class="tg-0lax">The type of test smells detected on each unit test file</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">debt_testfile_history</td>
+                        <td class="tg-0lax">Comments containing SATD in test files</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">apps</td>
+                        <td class="tg-0lax">The git clone url for the apps</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">fdroid</td>
+                        <td class="tg-0lax">Fdroid details for the app</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">google_play</td>
+                        <td class="tg-0lax">Google Play details for the app</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">FirstSmell_CommitPosition</td>
+                        <td class="tg-0lax">The commit when the first test smell occurs</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">SmellCooccurrence</td>
+                        <td class="tg-0lax">Co-occurrence of smell types</td>
+                      </tr>
+                      <tr>
+                        <td class="tg-0lax">TestFileSmellEvolution</td>
+                        <td class="tg-0lax">The smell trend for each test file</td>
+                      </tr>
+                    </table>
             </p>
             <p>
                 Listed below are details of the tables in the dataset: testsmells_java.sqlite
