--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
 <div class="w3-center w3-padding-32">
     <div class="w3-card w3-container w3-justify w3-padded-box">
         <p>
-            Content not availalbe due to blind review requirements. 
+            Content not availalbe due to double blind review requirements. 
         </p>
         <!-- <p>
             This research on unit test smells, along with the implementation of the test smell detection tool was
