--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -43,18 +43,19 @@
 </header>
 <div class="w3-center w3-padding-32">
     <div class="w3-card w3-container w3-justify w3-padded-box">
-        <a href="https://github.com/TestSmells/TestSmellDetector"><img
+        <!-- <a href="https://github.com/TestSmells/TestSmellDetector"><img
                 style="position: absolute; top: 0; right: 0; border: 0;"
                 src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
-                alt="Fork me on GitHub"></a>
+                alt="Fork me on GitHub"></a> !-->
 
 
         <p>
-            The source code for the test smell detection tool, tsDetect, is maintained on a publically accessible GitHub
-            repository. Feel free to download/fork the repository. Updates and extensions to the tool are most
-            definitely encouraged!
+            Due to the requirements of the bind review process, we are not providing the location of tools repository. 
         </p>
-        <div class="w3-container w3-third w3-margin-top w3-margin-bottom w3-center">
+        <p>
+            Please use this alternate link to download the tool: <a target='_blank' href='https://drive.google.com/uc?id=1If_XYg3O1dp69zIkOFBWShWNqU0L1ez0&export=download'>https://drive.google.com/uc?id=1If_XYg3O1dp69zIkOFBWShWNqU0L1ez0&export=download</a>
+        </p>
+         <!-- <div class="w3-container w3-third w3-margin-top w3-margin-bottom w3-center">
             <iframe src="https://ghbtns.com/github-btn.html?user=TestSmells&type=follow&count=true&size=large"
                     frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
         </div>
@@ -107,7 +108,7 @@
                 production file) along with the detection status for each smell. A detection of status of 'true'
                 indicates that the associated smell exists in the test file.
             </p>
-        </div>
+        </div> !-->
     </div>
 
     <div class="w3-card w3-padded-box w3-margin-top">
