--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -43,19 +43,20 @@
 </header>
 <div class="w3-center w3-padding-32">
     <div class="w3-card w3-container w3-justify w3-padded-box">
-        <!-- <a href="https://github.com/TestSmells/TestSmellDetector"><img
+        <a href="https://github.com/TestSmells/TestSmellDetector"><img
                 style="position: absolute; top: 0; right: 0; border: 0;"
                 src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
-                alt="Fork me on GitHub"></a> !-->
+                alt="Fork me on GitHub"></a>
 
-
+<!--
         <p>
             Due to the requirements of the bind review process, we are not providing the location of tools repository. 
         </p>
         <p>
             Please use this alternate link to download the tool: <a target='_blank' href='https://drive.google.com/uc?id=1If_XYg3O1dp69zIkOFBWShWNqU0L1ez0&export=download'>https://drive.google.com/uc?id=1If_XYg3O1dp69zIkOFBWShWNqU0L1ez0&export=download</a>
         </p>
-         <!-- <div class="w3-container w3-third w3-margin-top w3-margin-bottom w3-center">
+-->        
+        <div class="w3-container w3-third w3-margin-top w3-margin-bottom w3-center">
             <iframe src="https://ghbtns.com/github-btn.html?user=TestSmells&type=follow&count=true&size=large"
                     frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
         </div>
@@ -108,7 +109,7 @@
                 production file) along with the detection status for each smell. A detection of status of 'true'
                 indicates that the associated smell exists in the test file.
             </p>
-        </div> !-->
+        </div>
     </div>
 
     <div class="w3-card w3-padded-box w3-margin-top">
@@ -118,12 +119,12 @@
     </div>
 </div>
 
-<!-- <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
+<footer class="w3-container w3-teal w3-footer w3-animate-opacity">
     <p class="w3-small">
         Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
                                                                                    style="text-decoration: none;"
                                                                                    target="_blank">RIT</a>
     </p>
-</footer> -->
+</footer>
 </body>
 </html>
