--- a/pages/research/toolcompare.html
+++ b/pages/research/toolcompare.html
@@ -207,12 +207,12 @@ public void testParseRadicalName() {
     </div>
 
 
-    <!-- <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
+    <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
         <p class="w3-small">
             Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
                 style="text-decoration: none;" target="_blank">RIT</a>
         </p>
-    </footer> -->
+    </footer>
 
          <!-- Modal -->
          <div id="id01" class="w3-modal">
