--- a/pages/about.html
+++ b/pages/about.html
@@ -64,6 +64,8 @@
             <li><a href="https://github.com/shehan" target="_blank">Anthony Peruma</a></li>
             <li><a href="https://github.com/mkaouer" target="_blank">Mohamed Wiem Mkaouer</a></li>
             <li><a href="https://github.com/khalidsalmalki" target="_blank">Khalid Almalki</a></li>
+            <li><a href="https://github.com/cnewman" target="_blank">Christian D. Newman</a></li>
+            <li><a href="https://github.com/ouniali" target="_blank">Ali Ouni</a></li>            
         </ul>
         </p>
     </div>
