--- a/pages/research/experimentdata.html
+++ b/pages/research/experimentdata.html
@@ -87,11 +87,13 @@
                 exhibited by the projects, the dataset also includes details on the project's commits, releases and
                 issues. As our research involved the analysis of Android and traditional Java projects, we have split
                 our dataset into two, one for each category. Each dataset is in the format of a SQLite database file.
+                Also made available are the unit test files used in the precision and recall experiment of our study.
             </p>
             <p>
                 The datasets are available for download from here: <a target="_blank" href="https://drive.google.com/drive/folders/1vVeaNCCXUNI3TisQRb2AZAwabVKkF_wS?usp=sharing">https://drive.google.com/drive/folders/1vVeaNCCXUNI3TisQRb2AZAwabVKkF_wS?usp=sharing</a>
                 <br><i>testsmells_android.sqlite</i> contains the data related to Android projects.
                 <br><i>testsmells_java.sqlite</i> contains the data related to traditional Java projects.
+                <br><i>ManualVerification.zip</i> contains the unit test files used by participants to test the accuracy of the tool.
             </p>
             <p>
                 Listed below are details of the tables in the dataset: testsmells_android.sqlite
