--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -109,6 +109,10 @@
                 production file) along with the detection status for each smell. A detection of status of 'true'
                 indicates that the associated smell exists in the test file.
             </p>
+            <h5 style="text-decoration: underline">Misc.</h5>
+            <p>
+                UML class diagrams of the tool are available <a href='assets/tsDetect_class_diagram.png' target='_blank'>here</a>, <a href='assets/tsDetect_class_diagram_01.png' target='_blank'>here</a> and <a href='assets/tsDetect_class_diagram_02.png' target='_blank'>here</a>
+            </p>
         </div>
     </div>
 
