--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -113,6 +113,10 @@
             <p>
                 UML class diagrams of the tool are available <a href='assets/tsDetect_class_diagram.png' target='_blank'>here</a>, <a href='assets/tsDetect_class_diagram_01.png' target='_blank'>here</a> and <a href='assets/tsDetect_class_diagram_02.png' target='_blank'>here</a>
             </p>
+    <p>
+         <h5 style="text-decoration: underline">Demo</h5>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kzRSadHo5YA?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
         </div>
     </div>
 
