--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                 in the
                 source code.
             </p>
+            <p>
+                <h5 style="text-decoration: underline">Tool Demonstration</h5>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kzRSadHo5YA?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </p>
         </div>
 
         <div class="w3-card w3-padded-box w3-margin-top">
