--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -90,6 +90,9 @@
                     <a href="#ExperimentData">Experiment Data</a>
                 </li>
                 <li>
+                    <a href="#ToolCorrectness">Tool Correctness</a>
+                </li>
+                <li>
                     <a href="#ToolComparison">Tool Comparison</a>
                 </li>
                 <li>
@@ -120,6 +123,18 @@
                     <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
                 </p>
             </div>
+            <div class="w3-container" id="ToolCorrectness">
+                <h5>Tool Correctness</h5>
+                <p>
+                    tsDetect is able to correctly detect test smells with a precision score ranging from 85% to 100% and a 
+                    recall score from 90% to 100% with an average F-score of 96.5%
+                    <br>
+                    <span class=" w3-small w3-left-align"><a href="toolcorrectness.html">Click to continue reading...</a></span>
+                </p>
+                <p>
+                    <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
+                </p>
+            </div> 
             <div class="w3-container" id="ToolComparison">
                 <h5>Tool Comparison</h5>
                 <p>
