added link to tool correctness page

--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -109,6 +109,12 @@
                 production file) along with the detection status for each smell. A detection of status of 'true'
                 indicates that the associated smell exists in the test file.
             </p>
+            <h5 style="text-decoration: underline">Tool Correctness</h5>
+            <p>
+                tsDetect is able to correctly detect test smells with a precision score ranging from 85% to 100% and a 
+                recall score from 90% to 100% with an average F-score of 96.5%. 
+                <span class=" w3-small w3-left-align"><a href="research/toolcorrectness.html">Click to read more</a></span>
+            </p>
             <h5 style="text-decoration: underline">Misc.</h5>
             <p>
                 UML class diagrams of the tool are available <a href='assets/tsDetect_class_diagram.png' target='_blank'>here</a>, <a href='assets/tsDetect_class_diagram_01.png' target='_blank'>here</a> and <a href='assets/tsDetect_class_diagram_02.png' target='_blank'>here</a>
